# WastedTime

./: .gitignore  Cargo.toml  LICENSE.txt  README.md  run-debug.ps1  run-release.ps1
config/: config.default.toml
resources/: WastedTime.toml  init.sql
src/: main.rs
