[package]
name = "wasted_time"
version = "0.2.0"
authors = ["Florian Anderiasch <fa@art-core.org>"]

[[bin]]
name = "WastedTime"
path = "src/main.rs"

[dependencies]
kernel32-sys = "0.2.2"
regex = "1.5"
serde_json = "1.0"
time = "0.1"
toml = "0.5"
user32-sys = "0.2"
# 0.3 nc
winapi = "0.2"
rusqlite = "0.26.3"
rand = "0.8.4"
